--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,14 @@
         {% endblock %}
     </head>
     <body>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
 
         <div class="container">
-        {% block body %}{% endblock %}
+            {% block body %}{% endblock %}
         </div>
 
 
