--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,11 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DashboardController!{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block body %}
 
 <div class="example-wrapper">
     <h1>Bem vindo!</h1>
     <a href="{{  path('new-post') }}" class="btn btn-success my-3">Novo post</a> <br>
+    
+    <div class="count">
+        {{ pagination.getTotalItemCount }}
+    </div>
+
+    <table>
+        <tr>
+            {# sorting of properties based on query components #}
+            <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>
+            <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
+                {{ knp_pagination_sortable(pagination, 'Title', 'a.title') }}
+            </th>
+            <th{% if pagination.isSorted(['a.data_post']) %} class="sorted"{% endif %}>
+                {{ knp_pagination_sortable(pagination, 'Release', ['a.data_post']) }}
+            </th>
+        </tr>
+
+        {# table body #}
+        {% for article in pagination %}
+        <tr {% if loop.index is odd %}class="color"{% endif %}>
+            <td>{{ article.id }}</td>
+            <td>{{ article.titulo }}</td>
+            <td>{{ article.foto }}</td>
+            <td>{{ article.data_post}}</td>
+        </tr>
+    {% endfor %}
+    </table>
+    {# display navigation #}
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 </div>
+
 {% endblock %}
