--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -5,8 +5,15 @@
 {% block body %}
 
 <div class="example-wrapper">
-    <h1>Inserir postagem</h1>
-
-    {{ form(form) }}
+    <div class="text-center">
+        <h1>Inserir postagem</h1> 
+    </div>
+    <div class="container h-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-6 bg-white rounded my-3 p-5 border border-dark">
+                {{ form(form)  }}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
